# ML_Playground

./: .env.example  .gitignore  README.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 5d27148e75eb_create_datasets_table.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: datasets.py  health.py  models.py  pipelines.py  viz.py
apps/api/app/core/: config.py
apps/api/app/db/: crud.py  models.py  session.py
apps/api/app/schemas/: dataset.py  model.py  pipeline.py
apps/api/app/services/: dataset_service.py  model_service.py  pipeline_service.py  storage_service.py  viz_service.py
apps/api/app/utils/: redis_client.py
apps/api/app/workers/: rq_worker.py
apps/web/src/actions/: actions.ts
apps/web/src/app/: page.tsx
apps/web/src/app/playground/pipeline/: page.tsx
apps/web/src/components/dataset/: ColumnDetailModal.tsx  ColumnInsightCard.tsx  ColumnTable.tsx  DatasetSummary.tsx  ModelTrainingTab.tsx  PipelineTab.tsx  PreviewTable.tsx  UploadZone.tsx
apps/web/src/components/pipeline/: OperationPanel.tsx  PipelineHeader.tsx  PipelinePreview.tsx
apps/web/src/lib/: api.ts  types.ts
docs/: contracts.md
