[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.131.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "redis>=7.2.0",
    "rq>=2.7.0",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.41.0",
]
